# qt_all_loading

./: .clang-format  .gitignore  README.md  build.sh
code/: CMakeLists.txt  main.cc
code/src/baseGui/: customProgressIndicator.cc  customProgressIndicator.h  dotCircleLoadingWin.cc  dotCircleLoadingWin.h  solidCircleLoadingWin.cc  solidCircleLoadingWin.h
code/src/common/: common.cpp  common.h
code/src/core/: myWidget.cc  myWidget.h
code/src/resources/: all.qrc
code/src/resources/qss/: myWidget.qss
package/DEBIAN/: control  postinst  postrm
package/etc/qt_all_loading/: all_loading
